<resources>
    <string name="app_name">LeYou</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_collect">我的收藏</string>
    <string name="navigation_order">我的订单</string>
    <string name="navigation_like">喜欢</string>
    <string name="navigation_travel">我的游记</string>
    <string name="navigation_email">我的诉求</string>
    <string name="navigation_password">密码修改</string>
    <string name="navigation_setting">设置</string>

    <string name="header_author_name">安卓猴</string>
    <string name="header_author_url">sunjiajia.com</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="phone_number">手机号</string>

    <string name="get_msg_code">获取验证码</string>
    <string name="confirm">确定</string>
    <string name="password">密码</string>
    <string name="register_pass_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="register_name_digits">0123456789</string>
    <string name="password_verifycode">验证码</string>
    <string name="get_password_verifycode">点击发送</string>
    <string name="title_activity_registered">Registered</string>
    <string name="regest_password">密码&#160;&#160;&#160;&#160;</string>
    <string name="new_password">新密码</string>
    <string name="new1_password">新密码1</string>
    <string name="new2_password">新密码2</string>
    <string name="old_password">旧密码</string>
    <string name="hint_username">用户名</string>
    <string name="button_login">登录</string>
    <string name="button_register">注册账号</string>
    <string name="button_forget">忘记密码</string>
    <string name="register_label">注册界面</string>
    <string name="resetpass_label">重置密码</string>
    <string name="changepass_label">修改密码</string>
    <string name="updateinfo_label">修改用户界面</string>
    <string name="login_label">登录界面</string>
    <string name="hint_repassword">密码确认</string>
    <string name="name_is_null">用户名为空</string>
    <string name="pass_is_null">密码为空</string>
    <string name="network_err">网络错误</string>
    <string name="account_is_valid">用户因为未知原因被冰冻了，请联系管理员解冻</string>
    <string name="account_err">用户名或者密码错误</string>
    <string name="Phone_is_null">电话为空</string>
    <string name="code_is_null">验证码为空</string>
    <string name="Phone_length_err">电话号码长度不对</string>
    <string name="phone_is_same">你的手机号码已经被注册了，请更换手机号码</string>
    <string name="code_is_err">短信验证码错误</string>
    <string name="code_is_overtime">你的验证码超出有效期内，请重新获取</string>
    <string name="register_success">注册成功</string>
    <string name="register_err">注册失败</string>
    <string name="pass_length_err">密码长度应为6-16位</string>
    <string name="wechat">微信</string>
    <string name="QQ">QQ</string>
    <string name="weibo">微博</string>
    <string name="input_hint">请输入新的用户名</string>
    <string name="input_prefill"></string>
    <string name="phone_number_hint">请输入11位手机号码</string>
    <string name="old_password_hint">请输入旧的密码</string>
    <string name="new_password_hint">请输入新的密码</string>
    <string name="renew_password_hint">请再次输入新的密码</string>
    <string name="password_verifycode_hint">请输入短信验证码</string>
    <string name="regest_password_hint">密码为6到16个字符</string>
    <string name="register_agree_1">我已阅读并接受</string>
    <string name="register_agree_2">《注册协议》</string>
    <string name="produce_info">产品信息</string>
    <string name="mytour">我的旅程</string>
    <string name="mytourguidelocation">导游位置</string>
    <string name="info_message_title">XXX旅游团</string>
    <string name="info_push_title">旅游监管机构</string>
    <string name="mysetting_title">设置</string>
    <string name="myappeal_title">我的诉求</string>
    <string name="myrecord_title">我的游记</string>
    <string name="myrecordRelation_title">关联地点</string>
    <string name="myrecordfile_title">游游随记</string>
    <string name="myappeal_more_title">诉求详情</string>
    <string name="myappeal_all">诉求历史</string>
    <string name="mytravel_title">我的游记</string>
    <string name="mycollect_title">收藏</string>
    <string name="mytourguide">导游</string>
    <string name="city_location">选择城市</string>
    <string name="notes_reviews_title">评论</string>

    <string name="no_image">没有图片</string>
    <string name="main_home">首页</string>
    <string name="main_info">消息</string>
    <string name="main_notes">乐知</string>
    <string name="main_news">旅讯</string>
    <string name="transition_book_img">transtion_name</string>

    <string name="notes_1">鼓山，我觉得应该是让福州人骄傲的地方吧！在一个偌大的省会城市里，有一片林壑幽美、层峦叠嶂的山林，生活在此的人们怎么能不为她骄傲呢？从路人给我的建议中，就可以看出他们对鼓山的喜爱了。于是，离开西林小筑，我便顶着蒙蒙细雨前往鼓山了。\n一个人，走在一个人都没有的山路上，伴着古树、石塔、红墙包裹着的幽静，跟着雨滴敲击在青石板路上的回声，仿若孤傲行者，也似仙人神游。就在此时，我的心瞬间释然了许多。我似乎更加清晰了“人生五十刚开始”的真谛。走在路上，才能体会更多；走在路上，才能感悟更多；走在路上，才能打开胸襟。\n听当地人说，鼓山的美，在于她的自然，也因为她的人文。清朝道光年间有一个诗人叫魏杰，据说他根据鼓山的自然景物和民间传说，整理编写了十八景，并刻于达摩洞外的一面岩壁之上。我查了一下资料，是这么说的。达摩面壁、南极升天、仙猿守峡、古鹤巢云、仙人巨迹、福寿全图、蟠桃满坞、玉笋成林、蚁蜓渡潮、渔灯普照、狮子戏球、金蟾出洞、伏虎驮经、神龙听法、铠甲卸岩、慈航架壑、八仙岩洞、千佛梵宫。只因天气的原因，这些带着自然和人文的美景，也只能留在我的心里了。</string>
    <string name="notes_2">【福州历史起源悠久！】福州历史悠久、渊源流长，建城至今已有2200多年，是国家历史文化名城。早在新石器时期，福州先民就创造了壳丘头文化、昙石山文化。汉高祖五年（公元前202年），越王勾践后裔无诸受封为“闽越王”，兴建“冶”城，开始了福州最早的城垣建设。唐开元十三年（公元725年），因“州西北有福山”，始称“福州”，一直延用至今。</string>
    <string name="notes_3">X点击该链接查看详细信息</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载中...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_nomore">没有更多了</string>
</resources>
