<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/regiset_gray"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textColor="@color/black"
                        />

                    <EditText
                        android:id="@+id/regiset_phone"
                        style="@style/EditTextNoBackgroundTheme.RegistTextcolor"
                        android:digits="@string/register_name_digits"
                        android:hint="@string/phone_number_hint"
                        android:maxLength="11"
                        />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_verifycode"
                        android:textColor="@color/black"
                        />

                    <EditText
                        android:id="@+id/regiset_code"
                        style="@style/EditTextNoBackgroundTheme.RegistTextcolor"
                        android:layout_height="60dp"
                        android:hint="@string/password_verifycode_hint"
                        android:inputType="number"
                        android:maxLength="4"/>

                    <Button
                        android:id="@+id/regiset_code_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/get_password_verifycode"
                        android:textSize="14sp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/regest_password"
                        android:textColor="@color/black"
                        />

                    <EditText
                        android:id="@+id/regiset_password"
                        style="@style/EditTextNoBackgroundTheme.RegistTextcolor"
                        android:digits="@string/register_pass_digits"
                        android:hint="@string/regest_password_hint"
                        android:inputType="textPassword"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/regiset_sure_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_btn_selector"
                    android:text="立即注册"
                    android:textColor="@color/passbutton_selector"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp">
                 <CheckBox
                     android:id="@+id/regiset_agree_checkbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:button="@null"
                     android:background="@drawable/login_agree_selector"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/register_agree_1"/>
                    <TextView
                        android:id="@+id/regiset_agree_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textSize="14sp"
                        android:text="@string/register_agree_2"/>
                </LinearLayout>


            </LinearLayout>



        </LinearLayout>