<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regiset_gray"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/old_password"
                style="@style/EditTextNoBackgroundTheme.RegistTextcolor"
                android:digits="@string/register_pass_digits"
                android:hint="@string/old_password_hint"
                android:inputType="textPassword"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new1_password"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/new_password"
                style="@style/EditTextNoBackgroundTheme.RegistTextcolor"
                android:digits="@string/register_pass_digits"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new2_password"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/renew_password"
                style="@style/EditTextNoBackgroundTheme.RegistTextcolor"
                android:digits="@string/register_pass_digits"
                android:hint="@string/renew_password_hint"
                android:inputType="textPassword"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/regiset_sure_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_selector"
            android:gravity="center"/>


    </LinearLayout>


</LinearLayout>
