<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/lightgray"
              android:orientation="vertical"
              android:padding="20dp">

    <TextView
        android:id="@+id/popu_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="分享到"
        android:textColor="#000"
        android:textSize="18sp"/>

    <HorizontalScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/share_wechat"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/wechat"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/share_moments"
                android:gravity="center"
                android:padding="10dp"
                android:text="朋友圈"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/share_qq"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/QQ"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/share_qqzone"
                android:gravity="center"
                android:padding="10dp"
                android:text="QQ空间"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/share_weibo"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/weibo"
                android:textColor="@color/black"/>
        </LinearLayout>

    </HorizontalScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/location_selector"
        android:minHeight="0dp"
        android:padding="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="取消"/>
</LinearLayout>